--- a/frontend-v2/app/globals.css
+++ b/frontend-v2/app/globals.css
@@ -77,6 +77,35 @@ body,
   }
 }
 
+.carousel-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.cards-wrapper {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.card {
+  min-width: 30%;
+  margin-right: 2%;
+  flex-shrink: 0;
+}
+
+.partial-card {
+  transform: translateX(-10%);
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 20px;
+}
+
+
+
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
   height: 18px;
